exports[`OHECard should render correctly given default values 1`] = `
<div
  className="ohe-card-row">
  <Panel
    bsClass="panel"
    bsStyle="default"
    defaultExpanded={false}>
    <Col
      bsClass="col"
      className="ohe-card-row-icon-container"
      componentClass="div"
      xs={8}>
      <i
        aria-hidden="true"
        className="ohe-card-row-icon pull-right fa fa-calendar-o" />
      <span
        className="ohe-card-row-date">
         - 
        undefined\'
      </span>
      <br />
      <span
        className="ohe-card-row-time" />
    </Col>
    <Col
      bsClass="col"
      className="ohe-card-row-reg-num-col"
      componentClass="div"
      xs={4}>
      <span
        className="ohe-no-visits">
        נרשמים לביקור (
        0
        )
      </span>
    </Col>
    <div
      className="ohe-card-menu" />
  </Panel>
  <inject-EditOHEModal-with-appProviders
    ohe={Object {}}
    onClose={[Function]} />
  <inject-DeleteOHEModal-with-appProviders
    ohe={Object {}}
    onClose={[Function]} />
</div>
`;

exports[`OHECard should render with a single registration 1`] = `
<div
  className="ohe-card-row">
  <Panel
    bsClass="panel"
    bsStyle="default"
    defaultExpanded={false}>
    <Col
      bsClass="col"
      className="ohe-card-row-icon-container"
      componentClass="div"
      xs={8}>
      <i
        aria-hidden="true"
        className="ohe-card-row-icon pull-right fa fa-calendar-o" />
      <span
        className="ohe-card-row-date">
         - 
        undefined\'
      </span>
      <br />
      <span
        className="ohe-card-row-time" />
    </Col>
    <Col
      bsClass="col"
      className="ohe-card-row-reg-num-col"
      componentClass="div"
      xs={4}>
      <span
        className="">
        נרשמים לביקור (
        1
        )
      </span>
    </Col>
    <div
      className="ohe-card-menu" />
    <Table
      bordered={false}
      bsClass="table"
      className="vertical-middle ohe-card-user-table"
      condensed={false}
      fill={true}
      hover={false}
      responsive={false}
      striped={false}>
      <tbody>
        <tr
          className="ohe-card-user-table-row">
          <td
            className="ohe-card-user-image-cell">
            <Image
              bsClass="img"
              circle={true}
              responsive={false}
              rounded={false}
              src="pic"
              thumbnail={false} />
          </td>
          <td
            className="ohe-card-user-name-cell">
            fn
             
            ln
          </td>
          <td
            className="ohe-card-user-status-cell">
            מתכוון להגיע
          </td>
          <td
            className="ohe-card-user-phone-cell">
            <a
              href="tel: ">
               
            </a>
          </td>
          <td
            className="ohe-card-user-links-cell">
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsStyle="link"
              disabled={true}
              target="_blank">
              <i
                className="fa fa-2x fa-facebook-square ohe-card-facebook" />
            </Button>
          </td>
        </tr>
      </tbody>
    </Table>
  </Panel>
  <inject-EditOHEModal-with-appProviders
    ohe={
      Object {
        "registrations": Array [
          Object {
            "id": "fakeId1",
            "is_active": true,
            "user": Object {
              "first_name": "fn",
              "last_name": "ln",
              "picture": "pic",
            },
          },
        ],
      }
    }
    onClose={[Function]} />
  <inject-DeleteOHEModal-with-appProviders
    ohe={
      Object {
        "registrations": Array [
          Object {
            "id": "fakeId1",
            "is_active": true,
            "user": Object {
              "first_name": "fn",
              "last_name": "ln",
              "picture": "pic",
            },
          },
        ],
      }
    }
    onClose={[Function]} />
</div>
`;

exports[`OHECard should render with an ohe menu 1`] = `
<div
  className="ohe-card-row">
  <Panel
    bsClass="panel"
    bsStyle="default"
    defaultExpanded={false}>
    <Col
      bsClass="col"
      className="ohe-card-row-icon-container"
      componentClass="div"
      xs={8}>
      <i
        aria-hidden="true"
        className="ohe-card-row-icon pull-right fa fa-calendar-o" />
      <span
        className="ohe-card-row-date">
         - 
        undefined\'
      </span>
      <br />
      <span
        className="ohe-card-row-time" />
    </Col>
    <Col
      bsClass="col"
      className="ohe-card-row-reg-num-col"
      componentClass="div"
      xs={4}>
      <span
        className="ohe-no-visits">
        נרשמים לביקור (
        0
        )
      </span>
    </Col>
    <div
      className="ohe-card-menu">
      <Uncontrolled(Dropdown)
        id="fakeId_ohe_action">
        <DropdownToggle
          bsClass="dropdown-toggle"
          bsRole="toggle"
          bsStyle="link"
          noCaret={true}
          open={false}
          useAnchor={false}>
          <i
            className="fa fa-ellipsis-v" />
        </DropdownToggle>
        <DropdownMenu
          bsClass="dropdown-menu"
          bsRole="menu"
          className="dropdown-menu-left"
          pullRight={false}>
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            divider={false}
            header={false}
            onClick={[Function]}>
            עריכת מועד ביקור
          </MenuItem>
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            divider={false}
            header={false}
            onClick={[Function]}>
            מחיקה
          </MenuItem>
        </DropdownMenu>
      </Uncontrolled(Dropdown)>
    </div>
  </Panel>
  <inject-EditOHEModal-with-appProviders
    ohe={
      Object {
        "id": "fakeId",
      }
    }
    onClose={[Function]} />
  <inject-DeleteOHEModal-with-appProviders
    ohe={
      Object {
        "id": "fakeId",
      }
    }
    onClose={[Function]} />
</div>
`;

exports[`OHECard should render with multiple registrations 1`] = `
<div
  className="ohe-card-row">
  <Panel
    bsClass="panel"
    bsStyle="default"
    defaultExpanded={false}>
    <Col
      bsClass="col"
      className="ohe-card-row-icon-container"
      componentClass="div"
      xs={8}>
      <i
        aria-hidden="true"
        className="ohe-card-row-icon pull-right fa fa-calendar-o" />
      <span
        className="ohe-card-row-date">
         - 
        undefined\'
      </span>
      <br />
      <span
        className="ohe-card-row-time" />
    </Col>
    <Col
      bsClass="col"
      className="ohe-card-row-reg-num-col"
      componentClass="div"
      xs={4}>
      <span
        className="">
        נרשמים לביקור (
        3
        )
      </span>
    </Col>
    <div
      className="ohe-card-menu" />
    <Table
      bordered={false}
      bsClass="table"
      className="vertical-middle ohe-card-user-table"
      condensed={false}
      fill={true}
      hover={false}
      responsive={false}
      striped={false}>
      <tbody>
        <tr
          className="ohe-card-user-table-row">
          <td
            className="ohe-card-user-image-cell">
            <Image
              bsClass="img"
              circle={true}
              responsive={false}
              rounded={false}
              src="pic1"
              thumbnail={false} />
          </td>
          <td
            className="ohe-card-user-name-cell">
            fn1
             
            ln1
          </td>
          <td
            className="ohe-card-user-status-cell">
            מתכוון להגיע
          </td>
          <td
            className="ohe-card-user-phone-cell">
            <a
              href="tel: ">
               
            </a>
          </td>
          <td
            className="ohe-card-user-links-cell">
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsStyle="link"
              disabled={true}
              target="_blank">
              <i
                className="fa fa-2x fa-facebook-square ohe-card-facebook" />
            </Button>
          </td>
        </tr>
        <tr
          className="ohe-card-user-table-row">
          <td
            className="ohe-card-user-image-cell">
            <Image
              bsClass="img"
              circle={true}
              responsive={false}
              rounded={false}
              src="pic2"
              thumbnail={false} />
          </td>
          <td
            className="ohe-card-user-name-cell">
            fn2
             
            ln2
          </td>
          <td
            className="ohe-card-user-status-cell">
            מתכוון להגיע
          </td>
          <td
            className="ohe-card-user-phone-cell">
            <a
              href="tel:123">
              123
            </a>
          </td>
          <td
            className="ohe-card-user-links-cell">
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsStyle="link"
              disabled={false}
              href="fbLink2"
              target="_blank">
              <i
                className="fa fa-2x fa-facebook-square " />
            </Button>
          </td>
        </tr>
        <tr
          className="ohe-card-user-table-row">
          <td
            className="ohe-card-user-image-cell">
            <Image
              bsClass="img"
              circle={true}
              responsive={false}
              rounded={false}
              src="pic3"
              thumbnail={false} />
          </td>
          <td
            className="ohe-card-user-name-cell">
            fn3
             
            ln3
          </td>
          <td
            className="ohe-card-user-status-cell">
            מתכוון להגיע
          </td>
          <td
            className="ohe-card-user-phone-cell">
            <a
              href="tel:456">
              456
            </a>
          </td>
          <td
            className="ohe-card-user-links-cell">
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsStyle="link"
              disabled={false}
              href="fbLink3"
              target="_blank">
              <i
                className="fa fa-2x fa-facebook-square " />
            </Button>
          </td>
        </tr>
      </tbody>
    </Table>
  </Panel>
  <inject-EditOHEModal-with-appProviders
    ohe={
      Object {
        "registrations": Array [
          Object {
            "id": "fakeId1",
            "is_active": true,
            "user": Object {
              "first_name": "fn1",
              "last_name": "ln1",
              "picture": "pic1",
            },
          },
          Object {
            "id": "fakeId2",
            "is_active": true,
            "user": Object {
              "facebook_link": "fbLink2",
              "first_name": "fn2",
              "last_name": "ln2",
              "phone": "123",
              "picture": "pic2",
            },
          },
          Object {
            "id": "fakeId3",
            "is_active": true,
            "user": Object {
              "facebook_link": "fbLink3",
              "first_name": "fn3",
              "last_name": "ln3",
              "phone": "456",
              "picture": "pic3",
            },
          },
        ],
      }
    }
    onClose={[Function]} />
  <inject-DeleteOHEModal-with-appProviders
    ohe={
      Object {
        "registrations": Array [
          Object {
            "id": "fakeId1",
            "is_active": true,
            "user": Object {
              "first_name": "fn1",
              "last_name": "ln1",
              "picture": "pic1",
            },
          },
          Object {
            "id": "fakeId2",
            "is_active": true,
            "user": Object {
              "facebook_link": "fbLink2",
              "first_name": "fn2",
              "last_name": "ln2",
              "phone": "123",
              "picture": "pic2",
            },
          },
          Object {
            "id": "fakeId3",
            "is_active": true,
            "user": Object {
              "facebook_link": "fbLink3",
              "first_name": "fn3",
              "last_name": "ln3",
              "phone": "456",
              "picture": "pic3",
            },
          },
        ],
      }
    }
    onClose={[Function]} />
</div>
`;
